--- a/results.html
+++ b/results.html
@@ -31,7 +31,9 @@
             <a href="index.html" class="btn btn-secondary">Вернуться на главную</a>
         </div>
     </div>
-
+    <footer class="site-footer">
+        <p class="copyright-text">© 2025 Дарья Краткая. Все права защищены.</p>
+    </footer>
     <script src="scripts/results.js"></script>
     <script src="consoleProtection.js"></script>
 </body>
