--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="images/logo.png" alt="Логотип университета" class="site-logo">
     </header>
     <div class="container index-page">
-        <h1>Рейтинг факультетов университета</h1>
+        <h1>Рейтинг факультетов Новороссийского фелиала</h1>
 
         <!-- Выбор типа обучения -->
         <div class="buttons-container">
@@ -26,8 +26,10 @@
             <a href="results.html" class="btn btn-info">Посмотреть результаты</a>
         </div>
     </div>
-
+    <footer class="site-footer">
+        <p class="copyright-text">© 2025 Дарья Краткая. Все права защищены.</p>
+    </footer>
     <script src="scripts/index.js"></script>
-    <script src="consoleProtection.js"></script>
+    
 </body>
 </html>
