--- a/results.html
+++ b/results.html
@@ -34,6 +34,9 @@
     <footer class="site-footer">
         <p class="copyright-text">© 2025 Дарья Краткая. Все права защищены.</p>
     </footer>
+    <!-- Кнопка для загрузки файла с результатами -->
+<input type="file" id="uploadResults" accept=".txt">
+<label for="uploadResults">Загрузить результаты из файла</label>
     <script src="scripts/results.js"></script>
     <script src="consoleProtection.js"></script>
 </body>
